--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 	"features": {
 		"ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {},
 		"ghcr.io/rocker-org/devcontainer-features/r-packages:1": {
-			"packages": "janitor,skimr,palmerpenguins,ExclusionTable,collapse,tableone,gtsummary,finalfit,modelsummary,Hmisc,rms,ggsurvfit,survminer,tidycmprsk,easystats,ggblanket,ggpubr,Gmisc,consort,DiagrammeR,DiagrammeRsvg,svglite,rsvg,forestplot,forestploter,patchwork,cowplot,openxlsx2,flextable,officer,magick,pdftools"
+			"packages": "janitor,skimr,ExclusionTable,tableone,gtsummary,finalfit,Hmisc,rms,ggsurvfit,survminer,tidycmprsk,easystats,ggpubr,svglite,rsvg,cowplot,openxlsx2,magick,riskRegression,pammtools"
 		}, 
 		"ghcr.io/rocker-org/devcontainer-features/rstudio-server": {}
 	}, 
