--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,11 +3,11 @@
 {
 	"name": "R (rocker/r-ver base)",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "ghcr.io/rocker-org/devcontainer/tidyverse:4.3",
+	"image": "ghcr.io/rocker-org/devcontainer/tidyverse:4.2",
 	"features": {
 		"ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {},
 		"ghcr.io/rocker-org/devcontainer-features/r-packages:1": {
-			"packages": "janitor,skimr,ExclusionTable,tableone,gtsummary,finalfit,Hmisc,rms,ggsurvfit,survminer,tidycmprsk,easystats,ggpubr,svglite,rsvg,cowplot,openxlsx2,magick,riskRegression,pammtools"
+			"packages": "janitor,skimr,gtsummary,finalfit,Hmisc,rms,ggsurvfit,tidycmprsk,easystats,ggpubr,svglite,rsvg,cowplot,magick,riskRegression,pammtools,rstpm2"
 		}, 
 		"ghcr.io/rocker-org/devcontainer-features/rstudio-server": {}
 	}, 
