--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 	"features": {
 		"ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {},
 		"ghcr.io/rocker-org/devcontainer-features/r-packages:1": {
-			"packages": "janitor,skimr,gtsummary,finalfit,Hmisc,rms,ggsurvfit,tidycmprsk,easystats,ggpubr,svglite,rsvg,cowplot,magick,riskRegression,pammtools,rstpm2"
+			"packages": "janitor,skimr,gtsummary,finalfit,Hmisc,rms,ggsurvfit,tidycmprsk,easystats,ggpubr,svglite,rsvg,cowplot,magick,riskRegression,pammtools,rstpm2,survPen"
 		}, 
 		"ghcr.io/rocker-org/devcontainer-features/rstudio-server": {}
 	}, 
@@ -21,7 +21,19 @@
         "8787": {
             "label": "RStudio IDE"
         }
-	}
+	},
+	// write vscode extensions such as quarto, github copilot, markdowmn-PDF and R.
+	"customizations": {
+		// Configure properties specific to VS Code.
+		"vscode": {
+		  // Add the IDs of extensions you want installed when the container is created.
+		  "extensions": [
+			"quarto.quarto", 
+			"GitHub.copilot", 
+			"REditorSupport.r"
+		]
+		}
+	  }
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
