--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 	"features": {
 		"ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {},
 		"ghcr.io/rocker-org/devcontainer-features/r-packages:1": {
-			"packages": "janitor,skimr,gtsummary,finalfit,Hmisc,rms,ggsurvfit,tidycmprsk,easystats,ggpubr,svglite,rsvg,cowplot,magick,riskRegression,pammtools,rstpm2,survPen"
+			"packages": "janitor,skimr,gtsummary,finalfit,Hmisc,rms,ggsurvfit,survminer,tidycmprsk,easystats,ggpubr,svglite,rsvg,cowplot,magick,riskRegression,pammtools,rstpm2,survPen"
 		}, 
 		"ghcr.io/rocker-org/devcontainer-features/rstudio-server": {}
 	}, 
